[tool.poetry]
name = "streamlit-pd-101"
version = "0.1.0"
description = ""
authors = ["panachainy <panachai.ny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.34.0"
pandas = "^2.2.2"
langchain-community = "^0.0.38"
pandasai = "2.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
